tests/typechecker/pass/104-inc.hyg
let mutable x = 4;
let mutable y = 4.0f;
(x++): int;
(++x): int;
(++y): float;
(y++): float
