tests/typechecker/fail/102-remainder.hyg
(1.0f % 3.0f) : float